chore: update pom and install Jacked